# polze

./: README.md  pyproject.toml  setup.py
.github/workflows/: ci-ubuntu.yml  ci-windows.yml
polze/: __init__.py  _polze.py  test.py  version.py
