[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = 'polze'
dynamic = ["version"]
description = "A package to locate poles and zeros of a meromorphic function with their multiplicities."
readme = 'README.md'
license = {file = 'LICENSE'}
requires-python = '>=3.8'
authors = [
  {name = "B. Nennig", email = 'benoit.nennig@isae-supmeca.fr'},
]
dependencies = [
    'numpy',
    'scipy',
    'matplotlib'
]
classifiers = [
  # How mature is this project?
  "Development Status :: 5 - Production/Stable",
  # Indicate who your project is intended for
  "Topic :: Scientific/Engineering",  
  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/nennigb/polze"

[tool.pylint]
max-line-length = 115
disable = [
    "C0302", # (too-many-lines)
    "C0103", # (invalid-name) For fidelity to math notation!
    "R0913", # (too-many-arguments)
    "R0914", # (too-many-locals)    
    "E0611", # (no-name-in-module)
    "E1101", # (no-member) Often fail with petsc4py and numpy
]

[tool.hatch.version]
path = "polze/version.py"
